[package]
name = "patht"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
num_cpus = "1.16.0"
reqwest = { version = "0.11.26", features = ["json", "blocking"] }
tokio = { version = "1.36.0", features = ["full"] }
